# student-management-qa-automation

.github/workflows/: ci.yml  jira_integration.yml
2026-03-09-students-app/: .env.example  .gitignore  README.md  pyproject.toml  upload_to_jira.py
2026-03-09-students-app/.github/workflows/: jira_integration.yml
2026-03-09-students-app/app/: db.py
2026-03-09-students-app/db/: init_db.py  schema.sql
2026-03-09-students-app/postman/: students_collection.json
2026-03-09-students-app/tests/: conftest.py  test_student_db.py  test_student_service.py  test_students_web_api.py  ui_test_external.py  ui_test_students.py
