[project]
name = "2026-03-09-students-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "pymysql",
    "cryptography",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "requests>=2.32",
    "selenium>=4.20",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
markers = [
    "jira_key: marks a test with a Jira issue key (e.g. STUDENT-001)",
]
